<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardGameApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="personal">Personal</string>
	<string name="shared">Shared</string>
    
    
    <string name="play">Play Card</string>
    <string name="pass">Pass Card</string>
    <string name="myhand">My Hand</string>
    <string name="passto">Pass to</string>
    <string name="table">Table</string>
    <string name="done">Done</string>
    <string name="error">Errors will be displayed here.</string>
    <string name="username">Enter Username:</string>

</resources>
