<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutBottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
		<LinearLayout
		    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="3"
		    >
		    
		    <Button
	            android:id="@+id/btnPersonalScreens"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="PersonalS"
	            style="?android:attr/buttonStyle"
	            android:onClick="clickPersonal" />
		    
		    <TextView
	            android:id="@+id/myHand"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/myhand"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <Button
	            android:id="@+id/btnSharedScreens"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="SharedS"
	            style="?android:attr/buttonStyle"
	            android:onClick="clickShared" />
		    
		</LinearLayout>
        

        <ListView
            android:id="@+id/listPersonalCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPersonalError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:text="@string/error"
            android:visibility="gone" />

        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >

	        <Button
	            android:id="@+id/btnPersonalPlay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/play"
	            style="?android:attr/buttonStyle"
	            android:onClick="clickPlay" />
	
	        <Button
	            android:id="@+id/btnPersonalPass"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/pass"
	            style="?android:attr/buttonStyle"
	            android:onClick="clickPass" />
	    </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPersonalPassTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passto" />

            <Spinner
                android:id="@+id/spinPersonalRecipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

       <Button
           android:id="@+id/btnPersonalDone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:visibility="gone"
           android:text="@string/done"
           style="?android:attr/buttonStyle"
           android:onClick="clickDone" />

    </LinearLayout>

</RelativeLayout>