<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center" >
	
	<!-- 
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbldeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DeviceName" />

        <EditText
            android:id="@+id/txtDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
	 -->
    
    <EditText
     android:id="@+id/txtUserName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="0dp"
     android:hint="@string/username"
     android:inputType="text"
     android:maxLength="10" />
    
    <Button
        android:id="@+id/btnLobbyPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/personal"
        android:onClick="selectAsPrivate" />

    <Button
        android:id="@+id/btnLobbyShared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/shared"
        android:onClick="selectAsPublic" />

</LinearLayout>
